# testtt

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  SECURITY.md  _config.yml  package.json  packages.config  pom.xml  pubspec.yaml  requirements.txt
apps/web-app/: package.json
config/: appconfig.xml  application.properties  config.ini  pip.conf  settings.json
crates/api/: Cargo.toml
crates/core/: Cargo.toml
frontend/apps/mobile-web/: package.json
src/: config.js  main.py
test-repo/: CONTRIBUTORS.md  Cargo.toml  Dockerfile  Gemfile  README.md  composer.json  go.mod  pyproject.toml  setup.py
test-repo/apps/mobile-app/: package.json
test-repo/backend/services/api/: requirements.txt
test-repo/backend/services/auth/: requirements.txt
test-repo/backend/services/worker/: requirements.txt
test-repo/config/: config.toml  config.yaml  docker-config.json  settings.xml
test-repo/crates/utils/: Cargo.toml
test-repo/frontend/apps/web-app/: package.json
